// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoMatch /> shallow rendering Match to snapshot 1`] = `
<Title>
  <h2
    className="sn_title"
  />
</Title>
`;

exports[`<NoMatch /> shallow rendering Match to snapshot 2`] = `
<h2
  className="sn_title"
/>
`;
